client/src/static/css/base.css
body, html {
    width: 100%;
    height: 100%;
    background-color: transparent;
    display: block;
    font-family: 'Roboto',sans-serif;
}

body, div, li, ul {
    border: 0;
    outline: 0;
    font-size: 100%;
    vertical-align: baseline;
    background: transparent;
    margin: 0;
    padding: 0;
    line-height: 1.2em;
}

#big_container {
    display: flex;
}

#title {
    font-size: 8em;
}

a {
    color: white;
    text-decoration: none;
}
a:hover {
    text-decoration: underline;
}

#table_of_contents_holder #toc_list_container .active {
    background: #F08080;
}

#table_of_contents_holder #toc_list_container .active,#table_of_contents_holder #toc_list_container .active a,#table_of_contents_holder #toc_list_container .active a:hover,#table_of_contents_holder #toc_list_container .active a:link {
    color: black;
}

#top-menu li.active a {
    background: #F08080;
    color: black;
}

#table_of_contents_holder {
    width: 15%;
    height: 100%;
    background: #8B0101;
    display: inline-block;
    position: fixed;
    color: white;
}

#content_holder {
    display: inline-block;
    margin-left: 15%;
    padding: 2%;
    width: 55%;
    background:white;
}

#logo_holder {
    color: white;
    height: 100%;
    position: fixed;
    margin-left: 70%;
    float: left;
    width: 30%;
}

#fox_image {
    padding-top: 100px;
    padding-left: 3.5%;
    width: 100%; 
    height: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#toc_text {
    background: lightgray;
    color: black;
    margin: 20px 0px;
    padding: 3px;
    font-size: 1.6em;
}

#toc_list_container {
    padding: 0px 0px 0px 0px;
    width: 100%;
}

ul {
    list-style: none;
    padding-left: 1%;
    width: 98%;
    display: block;
}

.list_item {
    font-size: 1.08em;
    padding-top: 2%;
    padding-bottom: 1%;
    width: 100%;
}

.list_sub_item {
    font-size: 1em;
    padding-top: 3%;
    padding-left: 10%;
}

.text_centerer {
    text-align: center;
}

.header {
    background: #8B0101;
    padding: 7px;
    color: white;
}

.sub_header {
    background: lightgray;
    padding: 5px;
}

